# markdown-viewer

./: .gitignore  LICENSE  README.md  index.html  markdown-viewer-full-spec.md  package-lock.json  package.json
docs/: build.md  install.md  release.md  resume-prompt.md
examples/: sample.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ActivityBar.tsx  ContentHeader.tsx  ExplorerPanel.tsx  FileTree.tsx  MarkdownImage.tsx  MarkdownViewer.tsx  SearchBar.tsx  SearchHighlight.tsx  SettingsPanel.tsx  SidePanel.tsx  icons.tsx
src/hooks/: useDocumentSearch.ts  useFolderBrowser.ts  useMarkdownFile.ts  useRecentFiles.ts  useTheme.ts  useZoom.ts
